nav list shows by default, fix alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,7 +94,7 @@
     }
     
     div#side-bar-left ul{
-        display: none;
+        /*display: none;*/
         margin-top: 0;
     }
 
